--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "box/spout": "^3.3",
         "phpoffice/phpspreadsheet": "^1.29",
         "guzzlehttp/guzzle": "^7.8",
-        "google/apiclient": "^2.15"
+        "google/apiclient": "^2.15",
+        "ext-libxml": "*",
+        "ext-dom": "*",
+        "illuminate/database": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0"
